--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
